@@ -448,6 +448,15 @@ void __gmpn_sqr_basecase _PROTO ((mp_ptr, mp_srcptr, mp_size_t));
 void __gmpn_mul_n _PROTO ((mp_ptr, mp_srcptr, mp_srcptr, mp_size_t, mp_ptr));
 void __gmpn_sqr _PROTO ((mp_ptr, mp_srcptr, mp_size_t, mp_ptr));
 
+void __gmp_rand_init_common _PROTO ((gmp_rand_state *s,
+				     gmp_rand_algorithm alg,
+				     unsigned long int size,
+				     mpz_t seed));
+void __gmp_rand_init_common_ui _PROTO ((gmp_rand_state *s,
+					gmp_rand_algorithm alg,
+					unsigned long int size,
+					unsigned long int seed));
+
 extern int __gmp_junk;
 extern const int __gmp_0;
 #define DIVIDE_BY_ZERO (__gmp_junk = 10/__gmp_0)
